// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays button when no container is available 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container"
        >
          <mock-MonacoEditor
            editorDidMount={[Function]}
            language="cpp"
            onChange={[Function]}
            options={
              Object {
                "selectOnLineNumbers": true,
              }
            }
            value="static void StringCreation(benchmark::State& state) {
  // Code inside this loop is measured repeatedly
  for (auto _ : state) {
    std::string created_string(\\"hello\\");
    // Make sure the variable is not optimized away by compiler
    benchmark::DoNotOptimize(created_string);
  }
}
// Register the function as a benchmark
BENCHMARK(StringCreation);

static void StringCopy(benchmark::State& state) {
  // Code before the loop is not measured
  std::string x = \\"hello\\";
  for (auto _ : state) {
    std::string copy(x);
  }
}
BENCHMARK(StringCopy);
"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="btn-toolbar"
                role="toolbar"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
                    />
                    <path
                      d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"
                    />
                  </svg>
                   Pull compilers
                </button>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="g-0 container-fluid"
              >
                <div
                  className="align-items-center gx-2 row row-cols-auto"
                >
                  <div
                    className="col"
                  >
                    <button
                      className="me-2 btn btn-primary"
                      disabled={false}
                      id="Run"
                      onClick={[Function]}
                      type="button"
                    >
                       
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 007.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                        />
                      </svg>
                       Run Benchmark
                    </button>
                  </div>
                  <div
                    className="col"
                  >
                    <div
                      className="me-2 form-check"
                    >
                      <input
                        checked={true}
                        className="form-check-input"
                        disabled={false}
                        id="disassembly"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="form-check-label"
                        htmlFor="disassembly"
                        title=""
                      >
                        Record disassembly
                      </label>
                    </div>
                  </div>
                  <div
                    className="col"
                  />
                  <div
                    className="ms-auto col-auto"
                  >
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <svg
                        alt="Open in Compiler Explorer"
                        className="line-img"
                        viewBox="0 0 1000 1000"
                        xmlSpace="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <style>
                          .st1{fill:#3c3c3f}
                        </style>
                        <path
                          d="M756.4 658.1c-3.2-5.7-3.2-12.7 0-18.5 3.8-6.9 7.3-13.8 10.6-21.1 2.3-5.2-1.4-11.1-7.2-11.1H697c-6.4 0-12.5 3.2-16 8.6-8.1 12.3-17.5 24.3-28.3 35-40.3 40.3-94 62.5-151 62.5S391 691.3 350.7 651s-62.5-94-62.5-151 22.2-110.7 62.5-151 94-62.5 151-62.5 110.7 22.2 151 62.5c10.7 10.7 20.2 22.7 28.3 35 3.5 5.4 9.5 8.6 16 8.6h62.8c5.7 0 9.5-5.9 7.2-11.1-3.2-7.2-6.8-14.1-10.6-21.1-3.2-5.7-3.1-12.7 0-18.5l21.3-38.6c4.1-7.5 2.8-16.8-3.2-22.8l-53.2-53.2c-6-6-15.4-7.4-22.8-3.2l-38.7 21.4c-5.8 3.2-12.7 3.1-18.5-.1-18.4-10.1-37.9-18.1-58.1-23.9-6.3-1.8-11.3-6.7-13.1-13L557.8 166c-2.4-8.2-9.9-13.9-18.4-13.9h-75.3c-8.5 0-16.1 5.6-18.4 13.9l-12.2 42.3c-1.8 6.3-6.8 11.2-13.1 13-20.2 5.9-39.7 13.9-58.1 24-5.8 3.2-12.7 3.2-18.5.1L305 224.1c-7.5-4.1-16.8-2.8-22.8 3.2L229 280.5c-6 6-7.4 15.4-3.2 22.8l21.4 38.7c3.2 5.8 3.1 12.7-.1 18.5-10.1 18.4-18.1 37.9-23.9 58.1-1.8 6.3-6.7 11.3-13 13.1l-42.3 12.2c-8.2 2.4-13.9 9.9-13.9 18.4v75.3c0 8.5 5.6 16.1 13.9 18.4l42.3 12.2c6.3 1.8 11.2 6.8 13 13.1 5.9 20.2 13.9 39.7 24 58.1 3.2 5.8 3.2 12.7.1 18.5l-21.4 38.7c-4.1 7.5-2.8 16.8 3.2 22.8l53.2 53.2c6 6 15.4 7.4 22.8 3.2l38.7-21.4c5.8-3.2 12.7-3.1 18.5.1 18.4 10.1 37.9 18.1 58.1 23.9 6.3 1.8 11.3 6.7 13.1 13l12.2 42.3c2.4 8.2 9.9 13.9 18.4 13.9h75.3c8.5 0 16.1-5.6 18.4-13.9l12.2-42.3c1.8-6.3 6.8-11.2 13.1-13 20.2-5.9 39.7-13.9 58.1-24 5.8-3.2 12.7-3.2 18.5-.1l38.7 21.4c7.5 4.1 16.8 2.8 22.8-3.2l53.2-53.2c6-6 7.4-15.4 3.2-22.8z"
                          fill="#67c52a"
                          style={
                            Object {
                              "fill": "#67c52a",
                            }
                          }
                          transform="translate(-165.28 -213.17) scale(1.4265)"
                        />
                        <path
                          className="st1"
                          d="M367.803 345.447h368.608v68.472H367.803zM367.803 467.128h304.13V535.6h-304.13zM367.803 588.666h368.608v68.472H367.803z"
                          fill="#3c3c3f"
                        />
                      </svg>
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in CPP Insights"
                        className="line-img"
                        src="cppinsights.svg"
                      />
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in Build Bench"
                        className="line-img"
                        src="bb.svg"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="watermark"
        >
          <svg
            className="watermark2"
            style={
              Object {
                "fill": "#26595430",
              }
            }
            title="Run with Quick Bench!"
          >
            qb.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`displays id with annotations 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container"
        >
          <mock-MonacoEditor
            editorDidMount={[Function]}
            language="cpp"
            onChange={[Function]}
            options={
              Object {
                "selectOnLineNumbers": true,
              }
            }
            value="static void StringCreation(benchmark::State& state) {
  // Code inside this loop is measured repeatedly
  for (auto _ : state) {
    std::string created_string(\\"hello\\");
    // Make sure the variable is not optimized away by compiler
    benchmark::DoNotOptimize(created_string);
  }
}
// Register the function as a benchmark
BENCHMARK(StringCreation);

static void StringCopy(benchmark::State& state) {
  // Code before the loop is not measured
  std::string x = \\"hello\\";
  for (auto _ : state) {
    std::string copy(x);
  }
}
BENCHMARK(StringCopy);
"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="btn-toolbar"
                role="toolbar"
              >
                <div
                  className="me-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="compiler"
                    onClick={[Function]}
                    type="button"
                  >
                    compiler = Clang 10.0
                  </button>
                </div>
                <div
                  className="me-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="language"
                    onClick={[Function]}
                    type="button"
                  >
                    std = c++20
                  </button>
                </div>
                <div
                  className="me-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="optim"
                    onClick={[Function]}
                    type="button"
                  >
                    optim = O3
                  </button>
                </div>
                <div
                  className="dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="libc"
                    onClick={[Function]}
                    type="button"
                  >
                    STL = libstdc++(GNU)
                  </button>
                </div>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="g-0 container-fluid"
              >
                <div
                  className="align-items-center gx-2 row row-cols-auto"
                >
                  <div
                    className="col"
                  >
                    <button
                      className="me-2 btn btn-primary"
                      disabled={false}
                      id="Run"
                      onClick={[Function]}
                      type="button"
                    >
                       
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 007.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                        />
                      </svg>
                       Run Benchmark
                    </button>
                  </div>
                  <div
                    className="col"
                  >
                    <div
                      className="me-2 form-check"
                    >
                      <input
                        checked={true}
                        className="form-check-input"
                        disabled={false}
                        id="disassembly"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="form-check-label"
                        htmlFor="disassembly"
                        title=""
                      >
                        Record disassembly
                      </label>
                    </div>
                  </div>
                  <div
                    className="col"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        checked={false}
                        className="form-check-input"
                        disabled={false}
                        id="clean-cache"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="form-check-label"
                        htmlFor="clean-cache"
                        title=""
                      >
                        Clear cached results
                      </label>
                    </div>
                  </div>
                  <div
                    className="ms-auto col-auto"
                  >
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <svg
                        alt="Open in Compiler Explorer"
                        className="line-img"
                        viewBox="0 0 1000 1000"
                        xmlSpace="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <style>
                          .st1{fill:#3c3c3f}
                        </style>
                        <path
                          d="M756.4 658.1c-3.2-5.7-3.2-12.7 0-18.5 3.8-6.9 7.3-13.8 10.6-21.1 2.3-5.2-1.4-11.1-7.2-11.1H697c-6.4 0-12.5 3.2-16 8.6-8.1 12.3-17.5 24.3-28.3 35-40.3 40.3-94 62.5-151 62.5S391 691.3 350.7 651s-62.5-94-62.5-151 22.2-110.7 62.5-151 94-62.5 151-62.5 110.7 22.2 151 62.5c10.7 10.7 20.2 22.7 28.3 35 3.5 5.4 9.5 8.6 16 8.6h62.8c5.7 0 9.5-5.9 7.2-11.1-3.2-7.2-6.8-14.1-10.6-21.1-3.2-5.7-3.1-12.7 0-18.5l21.3-38.6c4.1-7.5 2.8-16.8-3.2-22.8l-53.2-53.2c-6-6-15.4-7.4-22.8-3.2l-38.7 21.4c-5.8 3.2-12.7 3.1-18.5-.1-18.4-10.1-37.9-18.1-58.1-23.9-6.3-1.8-11.3-6.7-13.1-13L557.8 166c-2.4-8.2-9.9-13.9-18.4-13.9h-75.3c-8.5 0-16.1 5.6-18.4 13.9l-12.2 42.3c-1.8 6.3-6.8 11.2-13.1 13-20.2 5.9-39.7 13.9-58.1 24-5.8 3.2-12.7 3.2-18.5.1L305 224.1c-7.5-4.1-16.8-2.8-22.8 3.2L229 280.5c-6 6-7.4 15.4-3.2 22.8l21.4 38.7c3.2 5.8 3.1 12.7-.1 18.5-10.1 18.4-18.1 37.9-23.9 58.1-1.8 6.3-6.7 11.3-13 13.1l-42.3 12.2c-8.2 2.4-13.9 9.9-13.9 18.4v75.3c0 8.5 5.6 16.1 13.9 18.4l42.3 12.2c6.3 1.8 11.2 6.8 13 13.1 5.9 20.2 13.9 39.7 24 58.1 3.2 5.8 3.2 12.7.1 18.5l-21.4 38.7c-4.1 7.5-2.8 16.8 3.2 22.8l53.2 53.2c6 6 15.4 7.4 22.8 3.2l38.7-21.4c5.8-3.2 12.7-3.1 18.5.1 18.4 10.1 37.9 18.1 58.1 23.9 6.3 1.8 11.3 6.7 13.1 13l12.2 42.3c2.4 8.2 9.9 13.9 18.4 13.9h75.3c8.5 0 16.1-5.6 18.4-13.9l12.2-42.3c1.8-6.3 6.8-11.2 13.1-13 20.2-5.9 39.7-13.9 58.1-24 5.8-3.2 12.7-3.2 18.5-.1l38.7 21.4c7.5 4.1 16.8 2.8 22.8-3.2l53.2-53.2c6-6 7.4-15.4 3.2-22.8z"
                          fill="#67c52a"
                          style={
                            Object {
                              "fill": "#67c52a",
                            }
                          }
                          transform="translate(-165.28 -213.17) scale(1.4265)"
                        />
                        <path
                          className="st1"
                          d="M367.803 345.447h368.608v68.472H367.803zM367.803 467.128h304.13V535.6h-304.13zM367.803 588.666h368.608v68.472H367.803z"
                          fill="#3c3c3f"
                        />
                      </svg>
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in CPP Insights"
                        className="line-img"
                        src="cppinsights.svg"
                      />
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in Build Bench"
                        className="line-img"
                        src="bb.svg"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="nav nav-tabs"
          onKeyDown={[Function]}
          role="tablist"
        >
          <div
            className="nav-item"
          >
            <a
              aria-controls="output-tabs-tabpane-charts"
              aria-selected={true}
              className="nav-link active"
              data-rr-ui-event-key="charts"
              disabled={false}
              id="output-tabs-tab-charts"
              onClick={[Function]}
              role="tab"
            >
              Charts
            </a>
          </div>
          <div
            className="nav-item"
          >
            <a
              aria-controls="output-tabs-tabpane-asm"
              className="nav-link"
              data-rr-ui-event-key="asm"
              disabled={false}
              id="output-tabs-tab-asm"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Assembly
            </a>
          </div>
        </div>
        <div
          className="fill-content tab-content"
        >
          <div
            aria-labelledby="output-tabs-tab-charts"
            className="fill-content tab-pane active"
            id="output-tabs-tabpane-charts"
            role="tabpanel"
          >
            <mock-TimeChart
              afterTooltip={true}
              colors={
                Array [
                  Array [
                    "#5ed9cd",
                    "#f5b5c0",
                  ],
                ]
              }
              data={
                Array [
                  Array [
                    4.977504785737881,
                    14.969946162155678,
                  ],
                ]
              }
              dataLabels={
                Array [
                  "cpu_time",
                ]
              }
              fill={true}
              id="abcd"
              labels={
                Array [
                  "StringCreation",
                  "StringCopy",
                ]
              }
              legend={false}
              less="faster"
              more="slower"
              title={
                Array [
                  "ratio (CPU time / Noop time)",
                  "Lower is faster",
                ]
              }
              type="bar"
              xaxis="bar"
              yaxis="linear"
            >
              <div
                className="force-cb form-check"
              >
                <input
                  checked={false}
                  className="form-check-input"
                  disabled={false}
                  id="Noop"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="Noop"
                  title=""
                >
                  Show Noop bar
                </label>
              </div>
            </mock-TimeChart>
          </div>
          <div
            aria-labelledby="output-tabs-tab-asm"
            className="fill-content tab-pane"
            id="output-tabs-tabpane-asm"
            role="tabpanel"
          >
            <ul
              className="nav nav-tabs"
              onKeyDown={[Function]}
              role="tablist"
            />
            <div
              className="tab-content"
            />
            <div
              className="flex-container"
            >
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="asm"
                options={
                  Object {
                    "lineNumbers": [Function],
                    "lineNumbersMinChars": 10,
                    "readOnly": true,
                    "selectOnLineNumbers": true,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`displays id without annotations 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container"
        >
          <mock-MonacoEditor
            editorDidMount={[Function]}
            language="cpp"
            onChange={[Function]}
            options={
              Object {
                "selectOnLineNumbers": true,
              }
            }
            value="static void StringCreation(benchmark::State& state) {
  // Code inside this loop is measured repeatedly
  for (auto _ : state) {
    std::string created_string(\\"hello\\");
    // Make sure the variable is not optimized away by compiler
    benchmark::DoNotOptimize(created_string);
  }
}
// Register the function as a benchmark
BENCHMARK(StringCreation);

static void StringCopy(benchmark::State& state) {
  // Code before the loop is not measured
  std::string x = \\"hello\\";
  for (auto _ : state) {
    std::string copy(x);
  }
}
BENCHMARK(StringCopy);
"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="btn-toolbar"
                role="toolbar"
              >
                <div
                  className="me-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="compiler"
                    onClick={[Function]}
                    type="button"
                  >
                    compiler = GCC 8.3
                  </button>
                </div>
                <div
                  className="me-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="language"
                    onClick={[Function]}
                    type="button"
                  >
                    std = c++17
                  </button>
                </div>
                <div
                  className="me-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="optim"
                    onClick={[Function]}
                    type="button"
                  >
                    optim = O2
                  </button>
                </div>
                <div
                  className="dropdown"
                >
                  <button
                    aria-expanded={false}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={true}
                    id="libc"
                    onClick={[Function]}
                    type="button"
                  >
                    STL = libstdc++(GNU)
                  </button>
                </div>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="g-0 container-fluid"
              >
                <div
                  className="align-items-center gx-2 row row-cols-auto"
                >
                  <div
                    className="col"
                  >
                    <button
                      className="me-2 btn btn-primary"
                      disabled={false}
                      id="Run"
                      onClick={[Function]}
                      type="button"
                    >
                       
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 007.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                        />
                      </svg>
                       Run Benchmark
                    </button>
                  </div>
                  <div
                    className="col"
                  >
                    <div
                      className="me-2 form-check"
                    >
                      <input
                        checked={false}
                        className="form-check-input"
                        disabled={false}
                        id="disassembly"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="form-check-label"
                        htmlFor="disassembly"
                        title=""
                      >
                        Record disassembly
                      </label>
                    </div>
                  </div>
                  <div
                    className="col"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        checked={false}
                        className="form-check-input"
                        disabled={false}
                        id="clean-cache"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="form-check-label"
                        htmlFor="clean-cache"
                        title=""
                      >
                        Clear cached results
                      </label>
                    </div>
                  </div>
                  <div
                    className="ms-auto col-auto"
                  >
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <svg
                        alt="Open in Compiler Explorer"
                        className="line-img"
                        viewBox="0 0 1000 1000"
                        xmlSpace="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <style>
                          .st1{fill:#3c3c3f}
                        </style>
                        <path
                          d="M756.4 658.1c-3.2-5.7-3.2-12.7 0-18.5 3.8-6.9 7.3-13.8 10.6-21.1 2.3-5.2-1.4-11.1-7.2-11.1H697c-6.4 0-12.5 3.2-16 8.6-8.1 12.3-17.5 24.3-28.3 35-40.3 40.3-94 62.5-151 62.5S391 691.3 350.7 651s-62.5-94-62.5-151 22.2-110.7 62.5-151 94-62.5 151-62.5 110.7 22.2 151 62.5c10.7 10.7 20.2 22.7 28.3 35 3.5 5.4 9.5 8.6 16 8.6h62.8c5.7 0 9.5-5.9 7.2-11.1-3.2-7.2-6.8-14.1-10.6-21.1-3.2-5.7-3.1-12.7 0-18.5l21.3-38.6c4.1-7.5 2.8-16.8-3.2-22.8l-53.2-53.2c-6-6-15.4-7.4-22.8-3.2l-38.7 21.4c-5.8 3.2-12.7 3.1-18.5-.1-18.4-10.1-37.9-18.1-58.1-23.9-6.3-1.8-11.3-6.7-13.1-13L557.8 166c-2.4-8.2-9.9-13.9-18.4-13.9h-75.3c-8.5 0-16.1 5.6-18.4 13.9l-12.2 42.3c-1.8 6.3-6.8 11.2-13.1 13-20.2 5.9-39.7 13.9-58.1 24-5.8 3.2-12.7 3.2-18.5.1L305 224.1c-7.5-4.1-16.8-2.8-22.8 3.2L229 280.5c-6 6-7.4 15.4-3.2 22.8l21.4 38.7c3.2 5.8 3.1 12.7-.1 18.5-10.1 18.4-18.1 37.9-23.9 58.1-1.8 6.3-6.7 11.3-13 13.1l-42.3 12.2c-8.2 2.4-13.9 9.9-13.9 18.4v75.3c0 8.5 5.6 16.1 13.9 18.4l42.3 12.2c6.3 1.8 11.2 6.8 13 13.1 5.9 20.2 13.9 39.7 24 58.1 3.2 5.8 3.2 12.7.1 18.5l-21.4 38.7c-4.1 7.5-2.8 16.8 3.2 22.8l53.2 53.2c6 6 15.4 7.4 22.8 3.2l38.7-21.4c5.8-3.2 12.7-3.1 18.5.1 18.4 10.1 37.9 18.1 58.1 23.9 6.3 1.8 11.3 6.7 13.1 13l12.2 42.3c2.4 8.2 9.9 13.9 18.4 13.9h75.3c8.5 0 16.1-5.6 18.4-13.9l12.2-42.3c1.8-6.3 6.8-11.2 13.1-13 20.2-5.9 39.7-13.9 58.1-24 5.8-3.2 12.7-3.2 18.5-.1l38.7 21.4c7.5 4.1 16.8 2.8 22.8-3.2l53.2-53.2c6-6 7.4-15.4 3.2-22.8z"
                          fill="#67c52a"
                          style={
                            Object {
                              "fill": "#67c52a",
                            }
                          }
                          transform="translate(-165.28 -213.17) scale(1.4265)"
                        />
                        <path
                          className="st1"
                          d="M367.803 345.447h368.608v68.472H367.803zM367.803 467.128h304.13V535.6h-304.13zM367.803 588.666h368.608v68.472H367.803z"
                          fill="#3c3c3f"
                        />
                      </svg>
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in CPP Insights"
                        className="line-img"
                        src="cppinsights.svg"
                      />
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in Build Bench"
                        className="line-img"
                        src="bb.svg"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="fill-content tab-content"
        >
          <div
            aria-labelledby="output-tabs-tab-charts"
            className="fill-content tab-pane active"
            id="output-tabs-tabpane-charts"
            role="tabpanel"
          >
            <mock-TimeChart
              afterTooltip={true}
              colors={
                Array [
                  Array [
                    "#5ed9cd",
                    "#f5b5c0",
                  ],
                ]
              }
              data={
                Array [
                  Array [
                    4.977504785737881,
                    14.969946162155678,
                  ],
                ]
              }
              dataLabels={
                Array [
                  "cpu_time",
                ]
              }
              fill={true}
              id="abcd"
              labels={
                Array [
                  "StringCreation",
                  "StringCopy",
                ]
              }
              legend={false}
              less="faster"
              more="slower"
              title={
                Array [
                  "ratio (CPU time / Noop time)",
                  "Lower is faster",
                ]
              }
              type="bar"
              xaxis="bar"
              yaxis="linear"
            >
              <div
                className="force-cb form-check"
              >
                <input
                  checked={false}
                  className="form-check-input"
                  disabled={false}
                  id="Noop"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="Noop"
                  title=""
                >
                  Show Noop bar
                </label>
              </div>
            </mock-TimeChart>
          </div>
          <div
            aria-labelledby="output-tabs-tab-asm"
            className="fill-content tab-pane"
            id="output-tabs-tabpane-asm"
            role="tabpanel"
          >
            <ul
              className="nav nav-tabs"
              onKeyDown={[Function]}
              role="tablist"
            />
            <div
              className="tab-content"
            />
            <div
              className="flex-container"
            >
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="asm"
                options={
                  Object {
                    "lineNumbers": [Function],
                    "lineNumbersMinChars": 10,
                    "readOnly": true,
                    "selectOnLineNumbers": true,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
